Fix SVG fill on Firefox

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -118,9 +118,12 @@ header {
 }
 
 .header-logo {
-  fill: $bright;
   height: 3rem;
   width: 3rem;
+  fill: $bright;
+  svg {
+    fill: $bright;
+  }
 }
 
 // Post body
