--- a/_sass/_theme-dark.scss
+++ b/_sass/_theme-dark.scss
@@ -12,6 +12,9 @@
   }
   .header-logo {
     fill: $dark;
+    svg {
+      fill: $dark;
+    }
   }
   .diff {
     background-color: $bright;
